<resources>
    <string name="app_name">Schweinemäßig \n \r schlau</string>
    <string name="title_activity_surface_animation">Titel</string>
    <string name="title_activity_pig_thread">Titel</string>


    <!-- Login-Page -->
    <string name="login_name">Login-Name</string>
    <string name="password">Passwort</string>
    <string name="button_login">Login</string>
    <string name="no_user">Du bist noch nicht registriert, bitte melde dich an!</string>
    <string name="wrong_password">Falsches Passwort!</string>
    <string name="title_activity_register">Registrieren</string>
    <string name="no_internet">Keine Internet verfügbar!</string>
    <string name="no_internet2">Bitte prüfe deine Netzwerkverbindung</string>

    <!-- Register to new Account -->
    <string name="enter_name">Gib deinen Benutzernamen ein</string>
    <string name="enter_password">Gib dein Passwort ein</string>
    <string name="verify_password">Bestätige dein Passwort</string>
    <string name="register">Registrieren</string>
    <string name="title_activity_choose_mode">Wähle eine Kategorie aus</string>

    <!-- New Lecture -->
    <string name="new_lecture">Vorlesung wurde erfolgreich eingetragen!</string>
    <string name="already_exists">Die Vorlesung existiert schon!</string>
    <string name="deleted">Alle deine Scores wurden gelöscht!</string>


    <!-- Choose mode of learning  -->
    <string name="choose_mode">Wähle deinen Lernmodus</string>
    <string name="learn_mode">Lernen</string>
    <string name="exam_mode">Abfrage</string>
    <string name="add_mode">Hinzufügen</string>
    <string name="title_activity_question_mode_pig">QuestionModePigActivity</string>
    <string name="title_activity_add__gap__question_">Lückentext hinzufügen</string>

    <!-- Add question -->
    <string name="add_title">Gib einen Titel ein</string>
    <string name="new_answer">+</string>
    <string name="less_answer">-</string>
    <string name="add_question">Gib die Frage ein</string>
    <string name="add_text">Gib deinen Text ein</string>
    <string name="add_answer">Gib ein Stichwort als Antwort ein</string>
    <string name="no_question_answer">Gib sowohl Frage wie auch mindestens ein Stichwort ein!</string>
    <string name="send_to_server">Abschicken</string>
    <string name="dont_show">Diese Meldung nicht mehr anzeigen</string>
    <string name="instruction">Bitte markiere deine Lücken beginnend mit einem { und endend mit einem } \n
    Bitte keine Umlaute (ä, ö, ü) und kein ß verwenden!</string>
    <string name="instruction2">Bitte keine Leerzeichen, Umlaute (ä, ö, ü) und kein ß verwenden!</string>
    <string name="title_activity_add__normal__question_">Stichwort-Frage hinzufügen</string>
    <string name="Upload_succesfull">Die Frage wurde hochgeladen!</string>
    <string name="already_uploaded">Du hast diese Frage bereist hochgeladen!</string>
    <string name="atLeastOneAnswer">Du musst eine Frage und mindestens eine Antwort eingeben! Die Frage darf außerdem kein { und } enthalten und nicht mit einem Leerzeichen beginnen.</string>

    <!-- Question-Mode -->
    <string name="button_wait">Warten</string>
    <string name="button_start">Start</string>
    <string name="button_send">Check</string>
    <string name="button_next">Nächste</string>
    <string name="button_back">Zurück</string>
    <string name="text_gap">Leerstelle</string>
    <string name="title_activity_read_question">Lern-Modus</string>

    <string name="your_distance">Deine Distanz</string>
    <string name="your_rang">Dein Platz in der Rangliste:</string>
    <string name="best_user">Bester Spieler dieser Vorlesung:</string>
    <string name="action_settings">Settings</string>
    <string name="gapTextNotValid">Der Lückentext ist nicht korrekt! Bitte überprüfe, ob du die Klammern { und } richtig gesetzt hast. Jede Klammer muss geschlossen werden und es darf nur eine Klammer auf einmal offen sein.</string>
    <string name="title_activity_show_score">Geschafft!</string>
    <string name="title_activity_adapter_helper">AdapterHelperActivity</string>
    <string name="title_activity_best_user">Bestenliste</string>
    <string name="Upload_unsuccesfull">Der Upload hat leider nicht funktioniert. Versuche es noch einmal.</string>
    <string name="notesInputNotCorrect">Du hast unzulässige Zeichen in deinen Antworten. Bitte ändere sie.</string>


</resources>
