<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignTop="@+id/menu"
        android:layout_alignRight="@+id/menu"
        android:layout_alignEnd="@+id/menu"
        android:id="@+id/background">

        <com.learningapp.infoproject.knowledgetogo.SurfaceAnimationMenu
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/surfaceDrawing" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_mode"
        android:id="@+id/learn"
        android:textStyle="bold"
        android:background="@layout/button_choose_mode_layout"
        android:layout_below="@+id/add_list"
        android:layout_alignLeft="@+id/add_list"
        android:layout_alignStart="@+id/add_list"
        android:layout_alignRight="@+id/add_list"
        android:layout_alignEnd="@+id/add_list" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_mode"
        android:id="@+id/exam"
            android:textStyle="bold"
        android:background="@layout/button_choose_mode_layout"
            android:layout_alignBottom="@+id/add_list"
            android:layout_alignLeft="@+id/add_question"
            android:layout_alignStart="@+id/add_question"
            android:layout_marginBottom="32dp"
            android:layout_alignRight="@+id/add_question"
            android:layout_alignEnd="@+id/add_question" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_mode"
        android:id="@+id/add_question"
        android:textStyle="bold"
        android:background="@layout/button_choose_mode_layout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="122dp"
        android:id="@+id/add_list"
        android:visibility="invisible"
        android:background="#ff90e2af"
        android:textAlignment="center"
        android:layout_below="@+id/add_question"
        android:layout_alignLeft="@+id/exam"
        android:layout_alignRight="@+id/exam"
        android:layout_alignEnd="@+id/exam"
        android:focusable="true" />

    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/choose_lecture"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitCenter" />

    </RelativeLayout>

    <ListView
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lecture_menu"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="18dp"
        android:padding="10dp"/>

</android.support.v4.widget.DrawerLayout>
